corregidas las referencias a tienda.php
Antes era .html

--- a/compra-datos.html
+++ b/compra-datos.html
@@ -58,7 +58,7 @@
                 <div class="nav-inferior me-5 ms-5">
                     <ul class="container-fluid nav nav-pills nav-fill  collapse navbar-collapse">
                         <li class="nav-item ">
-                          <a class="nav-link" href="tienda.html">Tienda</a>
+                          <a class="nav-link" href="tienda.php">Tienda</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="conocenos.html">Conocenos</a>
@@ -81,7 +81,7 @@
                 <div class="row vh-100">
                     <!-- Izquierda / datos del comprador-->
                     <div class="col-7 resumen-compra-datos">
-                        <a href="tienda.html">Volver</a>
+                        <a href="tienda.php">Volver</a>
                         <div class="row">   <h2>Tus Datos</h2>    </div>
                         <div class="signin_form s_form d-grid justify-content-center p-3 "> 
                             <div class="input_text my-1"> 
