Imagenes de Mix en el frontpage

--- a/index.html
+++ b/index.html
@@ -155,32 +155,33 @@
             <div class="grilla-combos container col">
                 <div class="row row-cols-lg-3">
                     <div class="col-auto caja-mix text-center">
-                        <img src="/img/img productos/aceite-oliva.jpg" alt="">
+                        <img src="/img/Mix Estrella.jpg" alt="">
                         <div class="row text-center"><h3>Estrella</h3></div>
                         <p>Nueces, almendras, pasas de uva y maní</p>
                     </div>
                     <div class="col-auto caja-mix text-center">
-                        <img src="/img/img productos/aceite-oliva.jpg" alt="">
+                        <img src="/img/Mix Cuyano.jpg" alt="">
                         <div class="row text-center"><h3>Cuyano</h3></div>
                         <p>Nueces, almedras, pasas de uva y maní</p>
                     </div>
                     <div class="col-auto caja-mix text-center">
-                        <img src="/img/img productos/aceite-oliva.jpg" alt="">
+                        <img src="/img/Mix Choco-Cafe.jpg" alt="">
                         <div class="row text-center"><h3>Chococafe</h3></div>
                         <p>Almendras, arándanos, café bañado, chips de chocolate, maní</p>
                     </div>
                     <div class="col-auto caja-mix text-center">
-                        <img src="/img/img productos/aceite-oliva.jpg" alt="">
+                        <img src="/img/Mix Bananita.jpg" alt="">
                         <div class="row text-center"><h3>Bananita</h3></div>
                         <p>Nueces, pasas de uva, maní y chips de banana</p>
                     </div>
                     <div class="col-auto caja-mix text-center">
-                        <img src="/img/img productos/aceite-oliva.jpg" alt="">
+                        <img src="/img/Mix Tostado.jpg" alt="">
                         <div class="row text-center"><h3>Tostadito</h3></div>
                         <p>Maíz tostado, semillas de zapallo, almendras y maní</p>
                     </div>
                     <div class="col-auto caja-mix text-center">
-                        <img src="/img/img productos/aceite-oliva.jpg" alt="">
+                        <img src="/img/Mix Patagonico.jpg" alt="">
+
                         <div class="row text-center"><h3>Patagónico</h3></div>
                         <p>Arándanos, almendras, cajú, manzana y maní</p>
                     </div>
