--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                       
                         <div class="col col-5 collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                                <li class="nav-item "><a class="nav-link texto-cuenta" href="login.html">Ingresar</a></li>
-                                <li class="nav-item "><a class="nav-link texto-cuenta" href="registro.html">Registrarme</a></li>
+                                <li class="nav-item "><a class="nav-link texto-cuenta" href="login.php">Ingresar</a></li>
+                                <li class="nav-item "><a class="nav-link texto-cuenta" href="registro.php">Registrarme</a></li>
                             </ul>
                             <form class="d-flex">
                                 <button class="btn btn-outline-dark" href="compra-datos.html" type="submit">
