--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
                     <div class="col-lg-6 d-inline-flex flex-column ingreso-derecha align-items-center justify-content-center">
                         <div class="row">
                             <div class="col-sm-6"><a class="active bold" href="login.html">Iniciar Sesión</a></div>
-                            <div class="col-sm-6"><a class="" href="registro.html">Registrarme</a></div>
+                            <div class="col-sm-6"><a class="" href="registro.php">Registrarme</a></div>
                         </div>
                         <div class="signin_form s_form d-grid justify-content-center p-3 "> 
                             <div class="input_text my-1"> 
