--- a/trabajo-semillares.html
+++ b/trabajo-semillares.html
@@ -37,15 +37,15 @@
             <div class="col">
                 <div class="nav-superior container-fluid row d-flex justify-content-center ">
                     <nav class="navbar navbar-expand-lg navbar-light ">
-                        <a class="navbar-brand" href="index.html"><img class="nav-logo" src="img/marca/logo-semillares-simple.png" alt=""></a>
+                        <a class="navbar-brand" href="index.php"><img class="nav-logo" src="img/marca/logo-semillares-simple.png" alt=""></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
                       
                         <div class="col col-5 collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                                <li class="nav-item "><a class="nav-link texto-cuenta" href="login.html">Ingresar</a></li>
-                                <li class="nav-item "><a class="nav-link texto-cuenta" href="registro.html">Registrarme</a></li>
+                                <li class="nav-item "><a class="nav-link texto-cuenta" href="index.php">Ingresar</a></li>
+                                <li class="nav-item "><a class="nav-link texto-cuenta" href="registro.php">Registrarme</a></li>
                             </ul>
                             <form class="d-flex">
                                 <button class="btn btn-outline-dark" type="submit">
@@ -107,9 +107,9 @@
                     <br>Te dejamos disponibles las listas en PDF para que puedas descargarlas en cualquier dispositivo: </p>
                 <br>
                 <br>
-                <a class="enlace-simple" href="index.html">Lista para locales</a>
+                <a class="enlace-simple" href="index.php">Lista para locales</a>
                 <br>
-                <a class="enlace-simple"  href="index.html">Lista para distribuidores</a>
+                <a class="enlace-simple"  href="index.php">Lista para distribuidores</a>
             </div>
         </section>
 
