--- a/trabajo-semillares.html
+++ b/trabajo-semillares.html
@@ -44,7 +44,7 @@
                       
                         <div class="col col-5 collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                                <li class="nav-item "><a class="nav-link texto-cuenta" href="index.php">Ingresar</a></li>
+                                <li class="nav-item "><a class="nav-link texto-cuenta" href="login.php">Ingresar</a></li>
                                 <li class="nav-item "><a class="nav-link texto-cuenta" href="registro.php">Registrarme</a></li>
                             </ul>
                             <form class="d-flex">
