18. Recuperacion de contraseña

--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@
                     <h4>Informacion</h4>
                     <p>Direccion: ....</p>
                     <p>La Plata, Buenos Aires</p>
-                    <p>Telefono: (221) 123-456</p>
+                    <p>Telefono: 0221 570-2432</p>
                     <p>Email: ....@gmail.com</p>
                 </div>
                 <div class="col">
